example/secondfile/objects/Provider_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Request</relationshipLabel>
        <relationshipName>Provider_Request_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Review__c</fullName>
        <label>Date Of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directory__c</fullName>
        <label>Directory</label>
        <referenceTo>Directory__c</referenceTo>
        <relationshipLabel>Provider Request</relationshipLabel>
        <relationshipName>Provider_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flag_Count__c</fullName>
        <label>Flag Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISE_Email__c</fullName>
        <label>ISE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Flagged__c</fullName>
        <label>Last Flagged</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name_of_Reviewer__c</fullName>
        <formula>User__r.FirstName+ &apos; &apos;+ User__r.LastName</formula>
        <label>Reviewer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provider_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor_Company__c</fullName>
        <label>Requestor Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor_Message__c</fullName>
        <label>Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <label>Requestor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reviewer_Company__c</fullName>
        <formula>User__r.CompanyName</formula>
        <label>Reviewer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Primary_Email__c</fullName>
        <label>SP Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SP_Secondary_Email__c</fullName>
        <label>SP Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Score can be entered only between 1-5</description>
        <label>Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Provider__c</fullName>
        <formula>Directory__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Account_Name__c</fullName>
        <formula>User__r.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provider_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provider Request</label>
    <nameField>
        <displayFormat>P-ID{0000}</displayFormat>
        <label>Provider Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Request</pluralLabel>
    <recordTypes>
        <fullName>Request</fullName>
        <active>true</active>
        <label>Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Review</fullName>
        <active>true</active>
        <label>Review</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>